:sparkles: 393 feature listing data model and form adjustments (#432)
* :sparkles: adjusted price display and selection for multibuild

* :alien: updated openapi and frontend-generation

* :see_no_evil: added .run folder

* :alien: updated api to adjust to embedded class

* :bug: email domain switch was wrong way around

* :bug: button now flat

* :sparkles: added version display for frontend and backend

* added backend implementation for new address fields

* :bug: added flag check to domainChecker

* :sparkles: added address selection

* :sparkles: added version display to admin menu

* :rotating_light: linted and fixed spelling mistake

* :rotating_light: fixed linter error by introducing a feature-flag

* :rotating_light: fixed ts

* :sparkles: added textuell description for mandatory email setting

* added missing file, corrected test case and linted

* pmd issues fixed
