# anzeigen-backend/src/main/java/de/muenchen/anzeigenportal/swbrett/ads/model/Address.java
@@ -1,0 +1,21 @@
+package de.muenchen.anzeigenportal.swbrett.ads.model;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Embeddable;
+import lombok.Getter;
+import lombok.Setter;
+
+@Setter
+@Getter
+@Embeddable
+public class Address {
+
+    @Setter
+    @Column(name = "street")
+    private String street;
+
+    @Setter
+    @Column(name = "postal_code")
+    private String postalCode;
+
+}
