# anzeigen-frontend/src/api/swbrett/models/Address.ts
@@ -1,0 +1,72 @@
+/* eslint-disable */
+/**
+ * anzeigen_portal API
+ * anzeigen_portal API
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface Address
+ */
+export interface Address {
+    /**
+     * 
+     * @type {string}
+     * @memberof Address
+     */
+    street?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof Address
+     */
+    postalCode?: string;
+}
+
+/**
+ * Check if a given object implements the Address interface.
+ */
+export function instanceOfAddress(value: object): value is Address {
+    return true;
+}
+
+export function AddressFromJSON(json: any): Address {
+    return AddressFromJSONTyped(json, false);
+}
+
+export function AddressFromJSONTyped(json: any, ignoreDiscriminator: boolean): Address {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'street': json['street'] == null ? undefined : json['street'],
+        'postalCode': json['postalCode'] == null ? undefined : json['postalCode'],
+    };
+}
+
+  export function AddressToJSON(json: any): Address {
+      return AddressToJSONTyped(json, false);
+  }
+
+  export function AddressToJSONTyped(value?: Address | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'street': value['street'],
+        'postalCode': value['postalCode'],
+    };
+}
+
