# anzeigen-frontend/src/api/swbrett/models/SettingTO.ts
@@ -81,7 +81,7 @@ export const SettingTOSettingNameEnum = {
     DEFAULT_ORDERING: 'DEFAULT_ORDERING',
     MAX_ARCHIVE_DATE_RANGE: 'MAX_ARCHIVE_DATE_RANGE',
     MAX_RENTAL_DATE_RANGE: 'MAX_RENTAL_DATE_RANGE',
-    DISALLOWED_EMAIL_DOMAINS: 'DISALLOWED_EMAIL_DOMAINS'
+    EMAIL_DOMAIN_LIST: 'EMAIL_DOMAIN_LIST'
 } as const;
 export type SettingTOSettingNameEnum = typeof SettingTOSettingNameEnum[keyof typeof SettingTOSettingNameEnum];
 
