# anzeigen-frontend/src/api/swbrett/models/index.ts
@@ -1,6 +1,7 @@
  
 export * from './AdCategory';
 export * from './AdTO';
+export * from './Address';
 export * from './GetAds200Response';
 export * from './GetAds200ResponseSort';
 export * from './SettingTO';
